--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </header>
         <main>
             <h1>Nefi Isaías Llanes Molina | WDD 130</h1>
-            <img src="images/profile.jpg" alt="Hello, my name is Nefi Isaías Llanes Molina" width="200">
+            <img src="images/profile.png" alt="Hello, my name is Nefi Isaías Llanes Molina" width="200">
             <p>Hello! My name is Nefi Isaías Llanes Molina and I am from Yucatan, Mexico. I enjoy</p>
         </main>
         <footer>
