--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <link rel="stylesheet" href="styles/styles.css">
+        <meta name="description" content="Describe your home page here using keywords like your name, the course, the purpose of the page.">
+        <meta name="author" content="Nefi Llanes">
         <title>Nefi Llanes | WDD 130</title>
+        <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
         <header>
@@ -19,6 +21,11 @@
             <img src="images/profile.png" alt="Hello, my name is Nefi Isaías Llanes Molina" width="200">
             <p>Hello! My name is Nefi Isaías Llanes Molina and I am from Yucatan, Mexico. I enjoy</p>
         </main>
+        <aside>
+            <h2>Mexico</h2>
+            <img src="images/mexico.jpg" alt="Mexico landscape">
+            <p>Mexico is a beautiful country</p>
+        </aside>
         <footer>
             <p>©2024 🦈 Nefi Isaías Llanes Molina 🐬 Yucatán, México</p>
         </footer>
