--- a/week03/overlay.html
+++ b/week03/overlay.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <meta name="description" content="Describe your home page here using keywords like your name, the course, the purpose of the page.">
+        <title>Overlay</title>
+        <meta name="description" content="overlay">
         <meta name="author" content="Nefi Llanes">
-        <title>Nefi Llanes | WDD 130</title>
         <link rel="stylesheet" href="../week03/styles/overlay.css">
     </head>
     <body>
