--- a/wwr/about.html
+++ b/wwr/about.html
@@ -23,24 +23,22 @@
         </header>
         <main>
             <div class="hero">
-                <img src="" alt="">
                 <h1>Rafting Adventures</h1>
+                <img src="../wwr/images/rafting.webp" alt="RaftingAdventure">
                 <article>
                     <img src="" alt="">
-                    <p>Aquí va texto</p>
+                    <p>Ride the Rapids, Live the Adventure. At RiverQuest Adventures, every river is a new story waiting to be told!</p>
                 </article>
             </div>
             <section>
                 <h2>History</h2>
-                <p>Aquí va más texto</p>
+                <p>RiverQuest Adventures is a premier rafting agency offering unforgettable river experiences for thrill-seekers and nature lovers alike. Nestled in the heart of stunning mountain landscapes, our expertly guided trips range from exhilarating rapids for adrenaline junkies to serene, scenic floats for families and first-timers. With over a decade of experience, we prioritize safety, adventure, and creating lasting memories. Whether you're celebrating a special event, seeking an outdoor team-building experience, or simply want to connect with nature, RiverQuest Adventures is your gateway to an exciting, once-in-a-lifetime river journey. Book today and feel the rush!</p>
             </section>
-            <section>
+            <section class="hero2">
                 <h2>Adventure Awaits You</h2>
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
+                <img src="../wwr/images/rafting1.webp" alt="RaftingAdventure1", width="400">
+                <img src="../wwr/images/rafting2.webp" alt="RaftingAdventure2",  width="400">
+                <img src="../wwr/images/rafting3.webp" alt="RaftingAdventure3", width="400">
             </section>
         </main>
         <footer>
