--- a/wwr/about.html
+++ b/wwr/about.html
@@ -35,9 +35,9 @@
             </section>
             <section class="hero2">
                 <h2>Adventure Awaits You</h2>
-                <img src="../wwr/images/rafting1.webp" alt="RaftingAdventure1", width="400">
-                <img src="../wwr/images/rafting2.webp" alt="RaftingAdventure2",  width="400">
-                <img src="../wwr/images/rafting3.webp" alt="RaftingAdventure3", width="400">
+                <img src="../wwr/images/rafting1.webp" alt="RaftingAdventure1" width="400">
+                <img src="../wwr/images/rafting2.webp" alt="RaftingAdventure2"  width="400">
+                <img src="../wwr/images/rafting3.webp" alt="RaftingAdventure3" width="400">
             </section>
         </main>
         <footer>
