--- a/wwr/about.html
+++ b/wwr/about.html
@@ -37,6 +37,8 @@
                 <img src="../wwr/images/rafting1.webp" alt="RaftingAdventure1" width="400">
                 <img src="../wwr/images/rafting2.webp" alt="RaftingAdventure2"  width="400">
                 <img src="../wwr/images/rafting3.webp" alt="RaftingAdventure3" width="400">
+                <img src="../wwr/images/rafting2.webp" alt="RaftingAdventure2"  width="400">
+                <img src="../wwr/images/rafting3.webp" alt="RaftingAdventure3" width="400">
             </section>
         </main>
         <footer>
