week 4 almost complete 12

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,13 +4,11 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Rafting Adventures</title>
-        <link rel="preconnect" href="https://fonts.google.com/specimen/Geologica">
-        <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../wwr/rafting.css">
     </head>
     <body>
         <header>
-            <img src="../wwr/images/logo.webp" class="logo" alt="Sample Logo">
+            <img src="../wwr/images/logo.webp" class="logo" alt="Logo">
             <h1>Rafting Adventures</h1>
             <nav>
                 <ul class="navigation">
