--- a/wwr/about.html
+++ b/wwr/about.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-            <img src="../wwr/images/logo.webp" class="logo" alt="Logo">
+            <img src="../wwr/images/logo.webp" class="logo" alt="Sample Logo">
             <h1>Rafting Adventures</h1>
             <nav>
                 <ul class="navigation">
@@ -28,13 +28,11 @@
                         from exhilarating white-water adventures to serene float trips. Our experienced guides are not only skilled 
                         navigators but also passionate about sharing their love for the great outdoors. With safety as our top priority, 
                         we ensure that every adventure is both exciting and secure.</p>
-
                     <p>At Rafting Adventures, we believe that every trip is a unique experience. Our packages range from half-day excursions 
                         to multi-day adventures that include camping under the stars. Participants can explore breathtaking landscapes, 
                         encounter local wildlife, and enjoy the camaraderie of fellow adventurers. Whether you're a seasoned rafter or a 
                         first-timer, our customized tours cater to your preferences, allowing you to discover the beauty of nature in an 
                         unforgettable way.</p>
-                        
                     <p>Beyond the thrill of rafting, we are committed to environmental sustainability and community engagement. We actively 
                         participate in river clean-up initiatives and educational programs that promote conservation. By choosing River 
                         Explorers, you not only embark on an unforgettable adventure but also support efforts to protect the rivers and 
@@ -44,7 +42,7 @@
                 <img src="../wwr/images/rafting.webp" alt="RaftingAdventure">
             </div>
             <h2>History</h2>
-            <section class="hero3">
+            <section class="heroherohero">
                 <p>Rafting Adventures Adventures is a premier rafting agency offering unforgettable river experiences for thrill-seekers and nature 
                     lovers alike. Nestled in the heart of stunning mountain landscapes, our expertly guided trips range from exhilarating 
                     rapids for adrenaline junkies to serene, scenic floats for families and first-timers. With over a decade of experience, 
@@ -59,7 +57,7 @@
                     outdoor team-building experience, or simply want to connect with nature, RiverQuest Adventures is your gateway to an 
                     exciting, once-in-a-lifetime river journey. Book today and feel the rush!</p>
             </section>
-            <section class="hero2">
+            <section class="herohero">
                 <h2>Adventure Awaits You</h2>
                 <div>
                     <figure>
