--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,13 +3,15 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="This is my Rafting Adventure's about page.">
+        <meta name="author" content="Nefi Llanes">
         <title>Rafting Adventures</title>
-        <link rel="stylesheet" href="../wwr/rafting.css">
+        <link rel="stylesheet" href="../styles/rafting.css">
     </head>
     <body>
         <header>
             <img src="../wwr/images/logo.webp" class="logo" alt="Sample Logo">
-            <h1>Rafting Adventures</h1>
+            <h1>Rafting Adventures about</h1>
             <nav>
                 <ul class="navigation">
                     <li><a href="/index.html">Home</a></li>
