--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,13 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="This is my Rafting Adventure's about page.">
         <meta name="author" content="Nefi Llanes">
-        <title>Rafting Adventures</title>
+        <title>Rafting Adventures about</title>
         <link rel="stylesheet" href="../styles/rafting.css">
     </head>
     <body>
         <header>
             <img src="../wwr/images/logo.webp" class="logo" alt="Sample Logo">
-            <h1>Rafting Adventures about</h1>
+            <h1>Rafting Adventures</h1>
             <nav>
                 <ul class="navigation">
                     <li><a href="/index.html">Home</a></li>
@@ -88,6 +88,8 @@
         <footer>
             <div class="footer">
                 <p>Copyright © Rafting Adventures 2024 | Nefi Llanes</p>
+            </div>
+            <div class="footerimg">    
                 <nav class="sociallinks">
                     <a href="https://facebook.com">
                         <img src="../wwr/images/facebook.webp" alt="Facebook" width="30">
