week 5 tool evaluation

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -31,14 +31,14 @@
                     <label>Email: <input type="email" name="useremail"></label>
                     <legend>Select a purpose of the message:</legend>
                     <div>
-                        <input type="radio" name="purpose" value="generalinquiry">General Inquiry</input>
-                        <input type="radio" name="purpose" value="reservationquestion">Reservation Question</input>
-                        <input type="radio" name="purpose" value="websitesuggestion">Website Suggestion</input>
+                        <input type="radio" name="purpose" value="generalinquiry">General Inquiry<input>
+                        <input type="radio" name="purpose" value="reservationquestion">Reservation Question<input>
+                        <input type="radio" name="purpose" value="websitesuggestion">Website Suggestion<input>
                     </div>
                     <label for="message">Type your message: </label>
-                    <textarea name="message" rows="4" placeholder="Type your message here, max 200 characters" maxlength="500"></textarea>
+                    <textarea id="message" name="message" rows="4" placeholder="Type your message here, max 200 characters" maxlength="500"></textarea>
                     <div>
-                        <input type="checkbox" name="subscription" value="subscription" placeholder="Type your message here"/>
+                        <input type="checkbox" id="subscription" name="subscription" value="subscription"/>
                         <label for="subscription">Please subscribe me to the monthly newslatter</label>
                     </div>
 
