--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -31,11 +31,15 @@
                     <label>Email: <input type="email" name="useremail"></label>
                 </fieldset>
                 <fieldset>
-                    <legend for="purpose">Select a purpose of the message:</legend>
+                    <legend>Select a purpose of the message:</legend>
                     <div>
-                        <input type="radio" name="purpose" value="generalinquiry">General Inquiry</input>
-                        <input type="radio" name="purpose" value="reservationquestion">Reservation Question</input>
-                        <input type="radio" name="purpose" value="websitesuggestion">Website Suggestion</input>
+                        <input type="radio" id="generalinquiry" name="purposeofthemessage">
+                        <label for="generalinquiry">General Inquiry</label>
+                        <input type="radio" id="reservationquestion" name="purposeofthemessage">
+                        <label for="generalinquiry">Reservation Question</label>
+                        <input type="radio" id="websitesuggestion" name="purposeofthemessage">
+                        <label for="generalinquiry">Website Suggestion</label>
+       
                     </div>
                     <label for="message">Type your message: </label>
                     <textarea id="message" name="message" rows="4" placeholder="Type your message here, max 200 characters" maxlength="500"></textarea>
