week5 evaluation tool3

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -43,16 +43,16 @@
                 </article>
                 <img src="../wwr/images/rafting.webp" alt="RaftingAdventure">
             </div>
-            <h2>History</h2>
             <section class="heroherohero">
-                <p>Rafting Adventures Adventures is a premier rafting agency offering unforgettable river experiences for thrill-seekers and nature 
+                <h2>History</h2>
+                <p class="p">Rafting Adventures Adventures is a premier rafting agency offering unforgettable river experiences for thrill-seekers and nature 
                     lovers alike. Nestled in the heart of stunning mountain landscapes, our expertly guided trips range from exhilarating 
                     rapids for adrenaline junkies to serene, scenic floats for families and first-timers. With over a decade of experience, 
                     we prioritize safety, adventure, and creating lasting memories. Whether you're celebrating a special event, seeking an 
                     outdoor team-building experience, or simply want to connect with nature, RiverQuest Adventures is your gateway to an 
                     exciting, once-in-a-lifetime river journey. Book today and feel the rush!</p>
                 <img src="../wwr/images/rafting.webp" alt="RaftingAdventure">
-                <p>Rafting Adventures Adventures is a premier rafting agency offering unforgettable river experiences for thrill-seekers and nature 
+                <p class="pp">Rafting Adventures Adventures is a premier rafting agency offering unforgettable river experiences for thrill-seekers and nature 
                     lovers alike. Nestled in the heart of stunning mountain landscapes, our expertly guided trips range from exhilarating 
                     rapids for adrenaline junkies to serene, scenic floats for families and first-timers. With over a decade of experience, 
                     we prioritize safety, adventure, and creating lasting memories. Whether you're celebrating a special event, seeking an 
