--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -52,17 +52,17 @@
                 </fieldset>
             </form>
 
-            <section>
+            <section class="visit">
                 <h2>Visit Us</h2>
                 <div class="visitus">
+    
+                    <div class="map">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d23129.242182030168!2d-90.03277427095937!3d21.161599502827407!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2smx!4v1729986787461!5m2!1ses-419!2smx" width="500" height="400" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
                     <div class="contactinformation">
                         <p>Rafting Adventures</p>
                         <p>Phone: 999-999-9999</p>
                         <p>Email: <a href="mailto:">contact@raftingadventures.com</a></p>
-                    </div>
-    
-                    <div class="map">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d23129.242182030168!2d-90.03277427095937!3d21.161599502827407!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2smx!4v1729986787461!5m2!1ses-419!2smx" width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
             </section>
