--- a/wwr/about.html
+++ b/wwr/about.html
@@ -62,23 +62,23 @@
             <section class="herohero">
                 <h2>Adventure Awaits You</h2>
                 <div>
-                    <figure>
+                    <figure class="figure">
                         <img src="../wwr/images/rafting1.webp" alt="RaftingAdventure2">
                         <figcaption>Rafting 1</figcaption>
                     </figure>
-                    <figure>
+                    <figure class="figure">
                         <img src="../wwr/images/rafting3.webp" alt="RaftingAdventure2">
                         <figcaption>Rafting 2</figcaption>
                     </figure>
-                    <figure>
+                    <figure class="figure">
                         <img src="../wwr/images/rafting1.webp" alt="RaftingAdventure2">
                         <figcaption>Rafting 3</figcaption>
                     </figure>
-                    <figure>
+                    <figure class="figure">
                         <img src="../wwr/images/rafting3.webp" alt="RaftingAdventure2">
                         <figcaption>Rafting 4</figcaption>
                     </figure>
-                    <figure>
+                    <figure class="figure">
                         <img src="../wwr/images/rafting1.webp" alt="RaftingAdventure2">
                         <figcaption>Rafting 5</figcaption>
                     </figure>
