--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -71,15 +71,15 @@
             <section class="herohero">
                 <h2>Our Employees</h2>
                 <div>
-                    <figure>
+                    <figure class="figure">
                         <img src="../wwr/images/employee1.webp" alt="Employee1" class="contactemployee">
                         <figcaption>Lorena Ochoa</figcaption>
                     </figure>
-                    <figure>
+                    <figure class="figure">
                         <img src="../wwr/images/employee2.webp" alt="Employee2" class="contactemployee">
                         <figcaption>Lamine Yamal</figcaption>
                     </figure>
-                    <figure>
+                    <figure class="figure">
                         <img src="../wwr/images/employee3.webp" alt="Employee3" class="contactemployee">
                         <figcaption>Robert Lewandowski</figcaption>
                     </figure>
