--- a/wwr/index.html
+++ b/wwr/index.html
@@ -29,38 +29,46 @@
                 <img src="../wwr/images/rafting5.webp" alt="rafting5">
             </div>
 
-            <section class="herohero">
-                <div>
-                    <figure class="figureindex">
-                        <img src="../wwr/images/rivers3.webp" alt="rivers3" class="imgindex">
-                        <figcaption>Rivers</figcaption>
-                    </figure>
-                    <figure class="figureindex">
-                        <img src="../wwr/images/camping1.webp" alt="camping1" class="imgindex">
-                        <figcaption>Camping</figcaption>
-                    </figure>
-                    <figure class="figureindex">
-                        <img src="../wwr/images/rafting5.webp" alt="rafting5" class="imgindex">
-                        <figcaption>Rafting</figcaption>
-                    </figure>
+            <section>
+                <div class="divdivfigureindex">
+                    <div>
+                        <figure>
+                            <img src="../wwr/images/rivers3.webp" alt="rivers3" class="imgindex">
+                        </figure>
+                        <img src="../wwr/images/rivers.svg" alt="riversvg" class="svgimg">
+                        <p>Rivers</p>
+                    </div>
+                    
+                    <div>
+                        <figure>
+                            <img src="../wwr/images/camping1.webp" alt="camping1" class="imgindex">
+                        </figure>
+                        <img src="../wwr/images/camping.svg" alt="riversvg" class="svgimg">
+                        <p>Camping</p>
+                    </div>
+
+                    <div>
+                        <figure>
+                            <img src="../wwr/images/rafting5.webp" alt="rafting5" class="imgindex">
+                        </figure>
+                        <img src="../wwr/images/rafting.svg" alt="riversvg" class="svgimg">
+                        <p>Rafting</p>
+                    </div>
+                    
                 </div>
             </section>
 
-            <section class="heroherohero">
-                <h2>History</h2>
-                <p class="p">Rafting Adventures Adventures is a premier rafting agency offering unforgettable river experiences for thrill-seekers and nature 
-                    lovers alike. Nestled in the heart of stunning mountain landscapes, our expertly guided trips range from exhilarating 
-                    rapids for adrenaline junkies to serene, scenic floats for families and first-timers. With over a decade of experience, 
-                    we prioritize safety, adventure, and creating lasting memories. Whether you're celebrating a special event, seeking an 
-                    outdoor team-building experience, or simply want to connect with nature, RiverQuest Adventures is your gateway to an 
-                    exciting, once-in-a-lifetime river journey. Book today and feel the rush!</p>
-                <img src="../wwr/images/rafting.webp" alt="RaftingAdventure">
-                <p class="pp">Rafting Adventures Adventures is a premier rafting agency offering unforgettable river experiences for thrill-seekers and nature 
-                    lovers alike. Nestled in the heart of stunning mountain landscapes, our expertly guided trips range from exhilarating 
-                    rapids for adrenaline junkies to serene, scenic floats for families and first-timers. With over a decade of experience, 
-                    we prioritize safety, adventure, and creating lasting memories. Whether you're celebrating a special event, seeking an 
-                    outdoor team-building experience, or simply want to connect with nature, RiverQuest Adventures is your gateway to an 
-                    exciting, once-in-a-lifetime river journey. Book today and feel the rush!</p>
+            <section class="heroheroheroindex">
+                <div class="heroheroheroindeximg">
+                    <img src="../wwr/images/paisaje.jpg" alt="RaftingAdventure">
+                </div>
+                <div class="calltoaction2">
+                    <h2>More Than Just The Thrill</h2>
+                    <p class="p">Experience the rush of navigating through stunning landscapes and roaring rapids, all while surrounded by nature’s beauty. 
+                        Our expert guides ensure safety and fun for everyone, whether you're a beginner or a seasoned rafter. Don’t miss out on this exciting 
+                        opportunity—book your spot today and make a splash with us!</p>    
+                    <button type="submit" class="buttoncalltoaction2">Join Us</button>
+                </div>
             </section>
 
         </main>
