--- a/wwr/index.html
+++ b/wwr/index.html
@@ -24,9 +24,10 @@
         <main>
             <div class="heroindex">
                 <h1>Have an Adventure</h1>
-                <p>Make Memories with Dry Our</p>
-                <button type="submit">Book Now</button>
-                <img src="../wwr/images/rafting5.webp" alt="rafting5">
+                <div class="calltoactionone">
+                    <p>Make Memories with Dry Our</p>
+                    <button type="submit" class="calltoactionone">Book Now</button>
+                </div>
             </div>
 
             <section>
@@ -62,12 +63,12 @@
                 <div class="heroheroheroindeximg">
                     <img src="../wwr/images/paisaje.jpg" alt="RaftingAdventure">
                 </div>
-                <div class="calltoaction2">
+                <div class="calltoactiontwo">
                     <h2>More Than Just The Thrill</h2>
                     <p class="p">Experience the rush of navigating through stunning landscapes and roaring rapids, all while surrounded by nature’s beauty. 
                         Our expert guides ensure safety and fun for everyone, whether you're a beginner or a seasoned rafter. Don’t miss out on this exciting 
                         opportunity—book your spot today and make a splash with us!</p>    
-                    <button type="submit" class="buttoncalltoaction2">Join Us</button>
+                    <button type="submit" class="buttoncalltoactiontwo">Join Us</button>
                 </div>
             </section>
 
