--- a/wwr/index.html
+++ b/wwr/index.html
@@ -25,7 +25,7 @@
             <div class="heroindex">
                 <h1>Have an Adventure</h1>
                 <div class="calltoactionone">
-                    <p>Make Memories with Dry Our</p>
+                    <p>Make Memories with Rafting Adventures</p>
                     <button type="submit" class="calltoactionone">Book Now</button>
                 </div>
             </div>
