--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -31,29 +31,29 @@
             <section>
                 <div class="divdivfigureindex">
                     <div>
+                        <h2>Rivers</h2> 
                         <figure>
                             <img src="../wwr/images/rivers3.webp" alt="rivers3" class="imgindex">
                         </figure>
                         <img src="../wwr/images/rivers.svg" alt="riversvg" class="svgimg">
-                        <p>Rivers</p>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt impedit dolorem numquam. Eum eos accusamus non maiores eveniet, magnam quia dolorem eaque eius tenetur vitae nisi perferendis facilis, possimus culpa.</p>
                     </div>
                     
                     <div>
+                        <h2>Camping</h2> 
                         <figure>
                             <img src="../wwr/images/camping1.webp" alt="camping1" class="imgindex">
                         </figure>
                         <img src="../wwr/images/camping.svg" alt="riversvg" class="svgimg">
-                        <p>Camping</p>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est, repellat dolor eum reprehenderit eius rerum harum dolorem laborum doloribus, nihil necessitatibus laboriosam dicta provident nostrum! Sit quasi vitae minus nisi.</p>
                     </div>
 
                     <div>
-                        <figure>
+                        <h2>Rafting</h2>
+                        <figure> 
                             <img src="../wwr/images/rafting5.webp" alt="rafting5" class="imgindex">
                         </figure>
                         <img src="../wwr/images/rafting.svg" alt="riversvg" class="svgimg">
-                        <p>Rafting</p>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam voluptates neque distinctio tenetur illo nesciunt esse doloribus rerum laborum! Beatae et nihil sit. Nulla dolores quas aliquam itaque. Eligendi, quia.</p>
                     </div>
                     
