--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -14,10 +14,10 @@
             <h1>Rafting Adventures</h1>
             <nav>
                 <ul class="navigation">
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/about.html" target="_blank">About Us</a></li>
-                    <li><a href="/trips.html" target="_blank">Trips</a></li>
-                    <li><a href="/contact.html" target="_blank">Contact us</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html" target="_blank">About Us</a></li>
+                    <li><a href="trips.html" target="_blank">Trips</a></li>
+                    <li><a href="contact.html" target="_blank">Contact us</a></li>
                 </ul>
             </nav>
         </header>
@@ -29,34 +29,39 @@
             </div>
 
             <section>
-                <div class="divdivfigureindex">
-                    <div>
+                <div class="divdivfiguretrips">
+                    <div class="backgroundfigures">
                         <h2>Rivers</h2> 
                         <figure>
-                            <img src="../wwr/images/rivers3.webp" alt="rivers3" class="imgindex">
+                            <img src="../wwr/images/rivers3.webp" alt="rivers3" class="imgtrips">
                         </figure>
-                        <img src="../wwr/images/rivers.svg" alt="riversvg" class="svgimg">
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt impedit dolorem numquam. Eum eos accusamus non maiores eveniet, magnam quia dolorem eaque eius tenetur vitae nisi perferendis facilis, possimus culpa.</p>
+                        <img src="../wwr/images/rivers.svg" alt="riversvg" class="svgimgtrips">
+                        <div>
+                            <p>Our River Tours offer a serene yet exhilarating way to experience the beauty of nature. Perfect for families and beginners, these guided trips navigate calm waters, allowing you to soak in stunning landscapes and observe local wildlife. Each tour is tailored to create a relaxing atmosphere while introducing you to the joys of paddling and river exploration. Whether you're looking to unwind or introduce your kids to the wonders of the outdoors, our River Tours provide a memorable escape.</p>
+                        </div>
                     </div>
                     
-                    <div>
+                    <div class="backgroundfigures">
                         <h2>Camping</h2> 
                         <figure>
-                            <img src="../wwr/images/camping1.webp" alt="camping1" class="imgindex">
+                            <img src="../wwr/images/camping1.webp" alt="camping1" class="imgtrips">
                         </figure>
-                        <img src="../wwr/images/camping.svg" alt="riversvg" class="svgimg">
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est, repellat dolor eum reprehenderit eius rerum harum dolorem laborum doloribus, nihil necessitatibus laboriosam dicta provident nostrum! Sit quasi vitae minus nisi.</p>
+                        <img src="../wwr/images/camping.svg" alt="riversvg" class="svgimgtrips">
+                        <div>
+                            <p>For those seeking a deeper connection with nature, our Camping Adventures combine the thrill of the outdoors with the comforts of home. Set against picturesque backdrops, these trips include guided hikes, campfire storytelling, and opportunities for stargazing under clear night skies. You’ll learn essential camping skills while enjoying delicious meals prepared in the great outdoors. It’s an ideal choice for groups and families who want to create lasting memories around the campfire, surrounded by the beauty</p>
+                        </div>
                     </div>
 
-                    <div>
+                    <div class="backgroundfigures">
                         <h2>Rafting</h2>
                         <figure> 
-                            <img src="../wwr/images/rafting5.webp" alt="rafting5" class="imgindex">
+                            <img src="../wwr/images/rafting5.webp" alt="rafting5" class="imgtrips">
                         </figure>
-                        <img src="../wwr/images/rafting.svg" alt="riversvg" class="svgimg">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam voluptates neque distinctio tenetur illo nesciunt esse doloribus rerum laborum! Beatae et nihil sit. Nulla dolores quas aliquam itaque. Eligendi, quia.</p>
+                        <img src="../wwr/images/rafting.svg" alt="riversvg" class="svgimgtrips">
+                        <div>
+                            <p>Our Rafting Expeditions promise an unforgettable thrill ride! Navigate through challenging rapids and experience the rush of conquering nature’s powerful waterways. Each expedition is designed to test your skills while ensuring safety at every turn. Perfect for both seasoned rafters and newcomers, these trips are packed with excitement and camaraderie. Prepare for an action-packed adventure as you paddle through some of the most stunning and challenging rivers, creating memories that will last a lifetime.</p>
+                        </div>
                     </div>
-                    
                 </div>
             </section>
 
