--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -14,10 +14,10 @@
             <h1>Rafting Adventures</h1>
             <nav>
                 <ul class="navigation">
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/about.html" target="_blank">About Us</a></li>
-                    <li><a href="/trips.html" target="_blank">Trips</a></li>
-                    <li><a href="/contact.html" target="_blank">Contact us</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html" target="_blank">About Us</a></li>
+                    <li><a href="trips.html" target="_blank">Trips</a></li>
+                    <li><a href="contact.html" target="_blank">Contact us</a></li>
                 </ul>
             </nav>
         </header>
