--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -49,7 +49,7 @@
                         <label for="subscription">Please subscribe me to the monthly newslatter</label>
                     </div>
 
-                    <button type="submit">Submit</button>
+                    <button type="submit">Send message</button>
                 </fieldset>
             </form>
 
@@ -88,7 +88,7 @@
         </main>
         <footer>
             <div class="footer">
-                <p>Copyright © Rafting Adventures 2024 | Nefi Llanes</p>
+                <a href="https://app.moqups.com/3IqXtg44BqZB1lik1WvGIUfHRzyuLUVa/view/page/ad64222d5" target="_blank"> <p>Copyright © Rafting Adventures 2024 | Nefi Llanes</p></a>
             </div>
             <div class="footerimg">    
                 <nav class="sociallinks">
