--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -15,9 +15,9 @@
             <nav>
                 <ul class="navigation">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html" target="_blank">About Us</a></li>
-                    <li><a href="trips.html" target="_blank">Trips</a></li>
-                    <li><a href="contact.html" target="_blank">Contact us</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="trips.html">Trips</a></li>
+                    <li><a href="contact.html">Contact us</a></li>
                 </ul>
             </nav>
         </header>
@@ -27,8 +27,15 @@
             <form>
                 <fieldset>
                     <legend>Send your message</legend>
-                    <label>Username: <input type="text" name="username"></label>
-                    <label>Email: <input type="email" name="useremail"></label>
+                    <div>
+                        <label for="username" class="contactlabel">Username:</label>
+                        <input type="text" name="username" id="username">
+                    </div>
+                    <div>
+                        <label for="useremail" class="contactlabelone">Email: </label>
+                        <input type="email" name="useremail" id="useremail">
+                    </div>
+                    
                 </fieldset>
                 <fieldset>
                     <legend>Select a purpose of the message:</legend>
