--- a/wwr/index.html
+++ b/wwr/index.html
@@ -15,9 +15,9 @@
             <nav>
                 <ul class="navigation">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html" target="_blank">About Us</a></li>
-                    <li><a href="trips.html" target="_blank">Trips</a></li>
-                    <li><a href="contact.html" target="_blank">Contact us</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="trips.html">Trips</a></li>
+                    <li><a href="contact.html">Contact us</a></li>
                 </ul>
             </nav>
         </header>
