--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -93,9 +93,10 @@
                 </div>
             </section>
         </main>
-        <footer>
+        <a id="enlace" href="https://app.moqups.com/3IqXtg44BqZB1lik1WvGIUfHRzyuLUVa/view/page/ad64222d5" target="_blank">
+        <footer id="enlace">
             <div class="footer">
-                <a href="https://app.moqups.com/3IqXtg44BqZB1lik1WvGIUfHRzyuLUVa/view/page/ad64222d5" target="_blank"> <p>Copyright © Rafting Adventures 2024 | Nefi Llanes</p></a>
+                <p>Copyright © Rafting Adventures 2024 | Nefi Llanes</p>
             </div>
             <div class="footerimg">    
                 <nav class="sociallinks">
@@ -111,5 +112,6 @@
                 </nav>
             </div>
         </footer>
+        </a>
     </body>
 </html>
