--- a/wwr/index.html
+++ b/wwr/index.html
@@ -5,8 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="This is my Rafting Adventure's Home Page.">
         <meta name="author" content="Nefi Llanes">
-        <title>Rafting Adventures Home Page</title>
-        <link rel="stylesheet" href="../styles/rafting.css">
+        <title>Holahola</title>
+        <link rel="stylesheet" href="./styles/rafting.css">
+
     </head>
     <body>
         <header>
