--- a/wwr/about.html
+++ b/wwr/about.html
@@ -6,7 +6,7 @@
         <meta name="description" content="This is my Rafting Adventure's about page.">
         <meta name="author" content="Nefi Llanes">
         <title>Rafting Adventures about</title>
-        <link rel="stylesheet" href="../styles/rafting.css">
+        <link rel="stylesheet" href="./styles/rafting.css">
     </head>
     <body>
         <header>
